include/xui/xui_features.h

/* GRID_NAVIGATE: first = previous/next/page previous/page next/first/last (0..5),
   second = control (1) | shift (2). Moves selection without moving input focus. */
typedef struct xui_navigation_entry {
    uint32_t size, flags; /* disabled=1, not-selectable=2, collapsed=4 */
    uint64_t id, parent;
    xui_string label, keywords;
} xui_navigation_entry;
typedef struct xui_item_visual {
    uint32_t size, icon;
    xui_string image_path;
} xui_item_visual;
/* Optional parallel visual records. Existing navigation records remain unchanged. */
XUI_API xui_status XUI_CALL xui_navigation_items_visual(xui_handle target,
    const xui_navigation_entry* items, const xui_item_visual* visuals, uint32_t count) XUI_NOEXCEPT;
typedef xui_status (XUI_CALL *xui_key_handler)(void*, const xui_key_event*, uint32_t*);
typedef xui_status (XUI_CALL *xui_navigation_handler)(void*, const xui_navigation_event*, uint32_t*);
typedef xui_status (XUI_CALL *xui_post_callback)(void*, uint32_t);
XUI_API xui_status XUI_CALL xui_navigation_items(xui_handle target,
    const xui_navigation_entry* items, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_window_title(xui_handle window, xui_string title) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_window_key_handler(xui_handle window,
    xui_key_handler callback, void* context) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_window_navigation_handler(xui_handle window,
    xui_navigation_handler callback, void* context) XUI_NOEXCEPT;
/* The only cross-thread window operation. On success callback runs exactly once:
   execute=1 on the UI thread, or execute=0 when discarded. Rejection does not call it.
   Callbacks must not throw. Close rejects further posts with XUI_CLOSED. */
XUI_API xui_status XUI_CALL xui_window_post(xui_handle window,
    xui_post_callback callback, void* context) XUI_NOEXCEPT;
/* Miller columns retain immutable sources. All handles must belong to one window.
   Set replaces the complete column path silently. Maximum depth is 32. */
typedef struct xui_miller_column {
    uint32_t size, has_selection;
    xui_string title;
    xui_handle source;
    uint64_t selected_id, selected_version;
} xui_miller_column;
typedef xui_status (XUI_CALL *xui_miller_callback)(void*, const xui_miller_event*);
XUI_API xui_status XUI_CALL xui_miller_set_columns(xui_handle target,
    const xui_miller_column* columns, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_miller_state(xui_handle target,
    uint32_t* count, uint32_t* active, double* width) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_miller_active(xui_handle target, uint32_t column) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_miller_width(xui_handle target, double width) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_miller_scroll_state(xui_handle target,
    double* offset, double* maximum) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_miller_scroll(xui_handle target, double offset) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_miller_subscribe(xui_handle target,
    xui_miller_callback callback, void* context) XUI_NOEXCEPT;
typedef struct xui_feature_options {
    uint32_t size, version;
    xui_string name;
    xui_handle content, second;
    uint32_t mode, reserved;
} xui_feature_options;
/* Numeric fields have operation-specific meanings. All unused fields must be zero.
   TextSelection offsets count UTF-16 code units. Split surrogate pairs are rejected.
   XUI_F_SELECTION_STATE is read-only: a indicates focus; b counts compact terms.
   first and second contain the focused key's id and version when a is nonzero. */
typedef struct xui_feature_value {
    uint32_t size, version;
    double a, b, c, d;
    uint64_t first, second;
    xui_string text;
} xui_feature_value;
typedef struct xui_choice {
    uint32_t size, flags; /* bit 0: disabled */
    uint64_t id, version;
    xui_string text;
} xui_choice;
typedef struct xui_text_run {
    uint32_t size, flags; /* bold=1, italic=2, underline=4 */
    xui_string text, link;
} xui_text_run;
typedef xui_status (XUI_CALL *xui_secret_receiver)(void*, const char*, uint32_t);
XUI_API uint32_t XUI_CALL xui_feature_version(void) XUI_NOEXCEPT;
/* Bit 0: this build includes WebView2. No runtime starts from this query. */
XUI_API uint64_t XUI_CALL xui_capabilities(void) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_feature_create(xui_handle window, uint32_t kind,
    const xui_feature_options* options, xui_handle* result) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_feature_set(xui_handle target, uint32_t property,
    const xui_feature_value* value) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_feature_get(xui_handle target, uint32_t property,
    xui_feature_value* value) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_feature_action(xui_handle target, uint32_t action,
    uint64_t first, uint64_t second) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_choices(xui_handle target, const xui_choice* items,
    uint32_t count, uint64_t selected, uint32_t has_selection) XUI_NOEXCEPT;
/* Borrowed child handles remain valid only while their window lives.
   Window indices: 0 = title tabs, 1 = leading button, 2 = secondary title tabs.
   Window: titlebar root 3, title 4, minimize 5, maximize 6, close 7.
   Window children require a custom title bar.
   NavigationView: search 0, toggle 1, items 2, header items 3, footer items 4, title 5, empty message 6.
   Titlebar roots and NavigationLists use XUI_RETAINED_ELEMENT with their actual style targets.
   Breadcrumb and CommandBar: overflow button 0. Dynamic buttons use keyed functions below.
   TabStrip: new-tab button 0, including while hidden.
   Secondary tabs and the leading button are hidden by default.
   ContentDialog: primary 0, cancel 1, title 2, validation 3, body 4, footer 5.
   CommandSurface: editor 0, title 1, status 2, close button 3, content 4, results 5, menu 6.
   LocationPicker: editor 0, navigation 1, content 2, footer 3, toolbar 4.
   ViewPicker: choices 0, size 1, content 2.
   NavigationPane: items 0, status 1, content 2, group 3, progress 4.
   SplitButton: primary 0, secondary 1.
   ComboBox: optional editor 0, popup 1, choices 2 (ChoiceList style target).
   A noneditable ComboBox returns XUI_OK and handle 0 for editor 0.
   NumericInput: editor 0, decrease button 1, increase button 2.
   InlineStatus: action button 0, dismiss button 1.
   ColorPicker: red 0, green 1, blue 2, alpha 3, swatch buttons at 4 + swatch index.
   An unavailable swatch index returns XUI_INVALID_ARGUMENT.
   Children preserve their native targets. CommandSurface menu is exposed as
   XUI_RETAINED_ELEMENT, not ItemsView. Repeated lookup returns the same handle.
   Facade root handles continue to style their real Popup, not a facade-specific target. */
XUI_API xui_status XUI_CALL xui_feature_child(xui_handle target, uint32_t index,
    xui_handle* result) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_panel_add(xui_handle target, xui_handle child,
    uint32_t row, uint32_t column, uint32_t row_span, uint32_t column_span) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_popup_show(xui_handle target, xui_handle anchor) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_rich_runs(xui_handle target, const xui_text_run* runs,
    uint32_t count) XUI_NOEXCEPT;
/* Plaintext is valid only during this callback. The callback must not throw or retain it. */
XUI_API xui_status XUI_CALL xui_password_read(xui_handle target,
    xui_secret_receiver receiver, void* context) XUI_NOEXCEPT;
typedef struct xui_source_options {
    uint32_t size, version;
    uint64_t count;
    void* context;
    xui_source_query query;
    xui_context_ref retain, release;
} xui_source_options;
XUI_API xui_status XUI_CALL xui_source_create(xui_handle window,
    const xui_source_options* options, xui_handle* result) XUI_NOEXCEPT;
/* Runs on the UI thread for visible visuals only. Strings are copied before return.
   The first call has capacity zero. required is the full UTF-8 byte count.
   Insufficient capacity returns XUI_BUFFER_TOO_SMALL. No truncation is permitted.
   Uses the source options context and its existing retain/release lifetime. */
typedef xui_status (XUI_CALL *xui_source_visual_query)(void*, uint64_t, uint64_t,
    uint32_t*, char*, uint32_t, uint32_t*);
XUI_API xui_status XUI_CALL xui_source_create_visual(xui_handle window,
    const xui_source_options* options, xui_source_visual_query visual, xui_handle* result) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_source_attach(xui_handle target, xui_handle source) XUI_NOEXCEPT;
/* Release the caller's snapshot handle. Attached controls and selection terms retain their own source references. */
XUI_API xui_status XUI_CALL xui_source_release(xui_handle source) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_collection_contains(xui_handle target,
    uint64_t id, uint64_t version, uint32_t* selected) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_tree_expand(xui_handle target, uint64_t id,
    uint64_t version, uint32_t expanded) XUI_NOEXCEPT;
/* The request event value is an opaque, owner-bound token. Completion consumes it.
   Cancellation and owner disposal revoke delivery. There is no worker-thread UI access. */
XUI_API xui_status XUI_CALL xui_tree_complete(xui_handle target, xui_handle request,
    xui_handle source, xui_string error) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_request_cancel(xui_handle request) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_request_info(xui_handle request, xui_feature_value* value) XUI_NOEXCEPT;
typedef struct xui_grid_track {
    uint32_t size, sizing;
    float value, minimum, maximum;
    uint32_t reserved;
} xui_grid_track;
XUI_API xui_status XUI_CALL xui_grid_tracks(xui_handle target,
    const xui_grid_track* rows, uint32_t row_count,
    const xui_grid_track* columns, uint32_t column_count) XUI_NOEXCEPT;
typedef struct xui_column {
    uint32_t size, flags; /* numeric=1, filterable=2, checkable=4 */
    xui_string name;
    float width;
    uint32_t reserved;
} xui_column;
XUI_API xui_status XUI_CALL xui_grid_columns(xui_handle target,
    const xui_column* columns, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_grid_column_width(xui_handle target,
    uint32_t column, float width) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_grid_column_order(xui_handle target,
    const uint32_t* order, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_grid_filter(xui_handle target,
    uint32_t source_column, xui_string query) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_grid_sort(xui_handle target,
    uint32_t source_column, uint32_t descending) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_grid_check(xui_handle target,
    uint64_t id, uint64_t version, uint32_t checked) XUI_NOEXCEPT;
typedef struct xui_command_record {
    uint32_t size, kind;
    uint64_t id, parent;
    xui_string label, hint, pin_label;
    uint32_t flags, icon; /* disabled=1, checked=2, has-check=4 */
} xui_command_record;
/* DataGrid, TabStrip, and virtual collections, including borrowed Miller column lists.
   Independent of the control event subscription. Request supplies items synchronously.
   TabStrip Request carries the right-clicked tab ID, or the selected tab ID for keyboard requests.
   Pointer requests do not select or activate tabs. Empty strip space has no tab menu.
   Tab replacement or reordering cancels pending actions.
   Action carries the selected command ID. Menus support flat actions and separators.
   A null callback revokes the menu. Callbacks use the window UI thread. */
XUI_API xui_status XUI_CALL xui_context_menu_bind(xui_handle target,
    xui_callback callback, void* context) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_context_menu_items(xui_handle target,
    const xui_command_record* commands, uint32_t count) XUI_NOEXCEPT;
/* During Request only. Copies 0..256 paths for native Shell verbs in the same menu.
   Nonempty paths require a selected row and one common filesystem parent.
   Selection, source replacement, or subscription changes cancel pending actions.
   Discovery does not invoke a verb. Native Shell Open keeps its system behavior. */
XUI_API xui_status XUI_CALL xui_context_menu_shell_paths(xui_handle target,
    const xui_string* paths, uint32_t count) XUI_NOEXCEPT;
/* During Request only: 0 = native Windows menu (default), 1 = XUI Shell commands
   with an explicit Windows-menu fallback. Existing subscriptions remain native. */
XUI_API xui_status XUI_CALL xui_context_menu_presentation(xui_handle target, uint32_t presentation) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_commands_set(xui_handle target,
    const xui_command_record* commands, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_command_invoke(xui_handle target,
    uint64_t id, uint32_t pin) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_command_bind(xui_handle target,
    uint64_t id, uint32_t key, uint32_t modifiers) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_shell_show(xui_handle anchor,
    const xui_string* paths, uint32_t count) XUI_NOEXCEPT;
typedef struct xui_shape {
    uint32_t size, flags; /* closed=1, interactive=2, has-clip=4 */
    uint64_t id;
    const xui_scene_point* points;
    uint32_t count, reserved;
    float fill_red, fill_green, fill_blue, fill_alpha;
    float stroke_red, stroke_green, stroke_blue, stroke_alpha;
    float stroke_width, clip_x, clip_y, clip_width, clip_height;
    uint32_t reserved2;
    double m11, m12, m21, m22, dx, dy;
    xui_string name;
} xui_shape;
XUI_API xui_status XUI_CALL xui_canvas_scene(xui_handle target,
    const xui_shape* shapes, uint32_t count) XUI_NOEXCEPT;
typedef struct xui_map_marker {
    uint32_t size, reserved;
    uint64_t id;
    double latitude, longitude;
    xui_string name;
} xui_map_marker;
XUI_API xui_status XUI_CALL xui_map_markers(xui_handle target,
    const xui_map_marker* markers, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_map_request(xui_handle target, xui_handle* request) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_map_complete(xui_handle target, xui_handle request,
    const xui_map_marker* markers, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_window_create_features(const xui_window_options* options,
    uint32_t custom_titlebar, xui_handle* result) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_dialog_validation(xui_handle target, xui_string message) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_web_origins(xui_handle target,
    const xui_string* origins, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_web_navigate(xui_handle target, xui_string uri) XUI_NOEXCEPT;
/* Native-owned result token. No foreign callback remains pinned during JavaScript.
   BUSY means pending. CLOSED means canceled by stop/unload/hide/owner close.
   request_cancel releases a pending or completed result without a completion callback. */
XUI_API xui_status XUI_CALL xui_web_evaluate(xui_handle target, xui_string script, xui_handle* request) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_web_result(xui_handle request, char* buffer,
    uint32_t capacity, uint32_t* required, uint32_t* is_error) XUI_NOEXCEPT;