bindings/rust/xui-sys/src/features.rs

unsafe extern "C" {
    pub fn xui_navigation_items_visual(
        target: u64,
        items: *const NavigationEntry,
        visuals: *const ItemVisual,
        count: u32,
    ) -> i32;
    pub fn xui_navigation_items(target: u64, items: *const NavigationEntry, count: u32) -> i32;
    pub fn xui_window_title(window: u64, title: Text) -> i32;
    pub fn xui_window_key_handler(window: u64, callback: KeyHandler, context: *mut c_void) -> i32;
    pub fn xui_window_navigation_handler(
        window: u64,
        callback: NavigationHandler,
        context: *mut c_void,
    ) -> i32;
    pub fn xui_window_post(window: u64, callback: PostCallback, context: *mut c_void) -> i32;
    pub fn xui_miller_set_columns(target: u64, columns: *const MillerColumn, count: u32) -> i32;
    pub fn xui_miller_state(target: u64, count: *mut u32, active: *mut u32, width: *mut f64)
    -> i32;
    pub fn xui_miller_active(target: u64, column: u32) -> i32;
    pub fn xui_miller_width(target: u64, width: f64) -> i32;
    pub fn xui_miller_scroll_state(target: u64, offset: *mut f64, maximum: *mut f64) -> i32;
    pub fn xui_miller_scroll(target: u64, offset: f64) -> i32;
    pub fn xui_miller_subscribe(target: u64, callback: MillerCallback, context: *mut c_void)
    -> i32;
    pub fn xui_feature_version() -> u32;
    pub fn xui_capabilities() -> u64;
    pub fn xui_feature_create(
        window: u64,
        kind: u32,
        options: *const FeatureOptions,
        result: *mut u64,
    ) -> i32;
    pub fn xui_feature_set(target: u64, property: u32, value: *const FeatureValue) -> i32;
    pub fn xui_feature_get(target: u64, property: u32, value: *mut FeatureValue) -> i32;
    pub fn xui_feature_action(target: u64, action: u32, first: u64, second: u64) -> i32;
    pub fn xui_choices(
        target: u64,
        items: *const Choice,
        count: u32,
        selected: u64,
        has_selection: u32,
    ) -> i32;
    pub fn xui_feature_child(target: u64, index: u32, result: *mut u64) -> i32;
    pub fn xui_panel_add(
        target: u64,
        child: u64,
        row: u32,
        column: u32,
        row_span: u32,
        column_span: u32,
    ) -> i32;
    pub fn xui_popup_show(target: u64, anchor: u64) -> i32;
    pub fn xui_rich_runs(target: u64, runs: *const TextRun, count: u32) -> i32;
    pub fn xui_password_read(target: u64, receiver: SecretReceiver, context: *mut c_void) -> i32;
    pub fn xui_source_create(window: u64, options: *const SourceOptions, result: *mut u64) -> i32;
    pub fn xui_source_create_visual(
        window: u64,
        options: *const SourceOptions,
        visual: SourceVisualQuery,
        result: *mut u64,
    ) -> i32;
    pub fn xui_source_attach(target: u64, source: u64) -> i32;
    pub fn xui_source_release(source: u64) -> i32;
    pub fn xui_collection_contains(target: u64, id: u64, version: u64, selected: *mut u32) -> i32;
    pub fn xui_tree_expand(target: u64, id: u64, version: u64, expanded: u32) -> i32;
    pub fn xui_tree_complete(target: u64, request: u64, source: u64, error: Text) -> i32;
    pub fn xui_request_cancel(request: u64) -> i32;
    pub fn xui_request_info(request: u64, value: *mut FeatureValue) -> i32;
    pub fn xui_grid_tracks(
        target: u64,
        rows: *const GridTrack,
        row_count: u32,
        columns: *const GridTrack,
        column_count: u32,
    ) -> i32;
    pub fn xui_grid_columns(target: u64, columns: *const Column, count: u32) -> i32;
    pub fn xui_grid_column_width(target: u64, column: u32, width: f32) -> i32;
    pub fn xui_grid_column_order(target: u64, order: *const u32, count: u32) -> i32;
    pub fn xui_grid_filter(target: u64, source_column: u32, query: Text) -> i32;
    pub fn xui_grid_sort(target: u64, source_column: u32, descending: u32) -> i32;
    pub fn xui_grid_check(target: u64, id: u64, version: u64, checked: u32) -> i32;
    pub fn xui_context_menu_bind(target: u64, callback: Callback, context: *mut c_void) -> i32;
    pub fn xui_context_menu_items(target: u64, commands: *const CommandRecord, count: u32) -> i32;
    pub fn xui_context_menu_shell_paths(target: u64, paths: *const Text, count: u32) -> i32;
    pub fn xui_context_menu_presentation(target: u64, presentation: u32) -> i32;
    pub fn xui_commands_set(target: u64, commands: *const CommandRecord, count: u32) -> i32;
    pub fn xui_command_invoke(target: u64, id: u64, pin: u32) -> i32;
    pub fn xui_command_bind(target: u64, id: u64, key: u32, modifiers: u32) -> i32;
    pub fn xui_shell_show(anchor: u64, paths: *const Text, count: u32) -> i32;
    pub fn xui_canvas_scene(target: u64, shapes: *const Shape, count: u32) -> i32;
    pub fn xui_map_markers(target: u64, markers: *const MapMarker, count: u32) -> i32;
    pub fn xui_map_request(target: u64, request: *mut u64) -> i32;
    pub fn xui_map_complete(
        target: u64,
        request: u64,
        markers: *const MapMarker,
        count: u32,
    ) -> i32;
    pub fn xui_window_create_features(
        options: *const Options,
        custom_titlebar: u32,
        result: *mut u64,
    ) -> i32;
    pub fn xui_dialog_validation(target: u64, message: Text) -> i32;
    pub fn xui_web_origins(target: u64, origins: *const Text, count: u32) -> i32;
    pub fn xui_web_navigate(target: u64, uri: Text) -> i32;
    pub fn xui_web_evaluate(target: u64, script: Text, request: *mut u64) -> i32;
    pub fn xui_web_result(
        request: u64,
        buffer: *mut u8,
        capacity: u32,
        required: *mut u32,
        is_error: *mut u32,
    ) -> i32;
}
